bug 709297 - reduce max cache size to 350MiB the next time we have to trash the cache. r=jduell